# mujoco-mcp

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  ADDING_NEW_OBJECTS_GUIDE.md  ADVANCED_FEATURES_GUIDE.md  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_EVOLUTION.md  BROWSER_TESTING_GUIDE.md  CHANGELOG.md  CLAUDE_CODE_ROBOT_CONTROL_GUIDE.md  CLAUDE_DESKTOP_FINAL_FIX.md  CLAUDE_DESKTOP_FIXED.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_DESKTOP_STATUS_FINAL.md  CLAUDE_DESKTOP_SUCCESS.md  CLAUDE_SETUP.md  CODE_QUALITY.md  COMPLETE_FEATURE_OVERVIEW.md  COMPOSITE_OBJECTS_AND_SCALING_SUMMARY.md  CONFIG.md  CONTRIBUTING.md  CURSOR_INTEGRATION_COMPLETE.md  CURSOR_SETUP.md  DOCUMENTATION_INDEX.md  DOWNLOAD_UPLOAD_FEATURES.md  Dockerfile  EGL_H264_FEATURES.md  EXECUTION_TRACKER_V0_4_0.md  EXECUTION_TRACKER_V0_4_1.md  EXECUTION_TRACKER_V0_4_2.md  EXECUTION_TRACKER_V0_5_0.md  EXECUTION_TRACKER_V0_5_1.md  EXECUTION_TRACKER_V0_5_2.md  EXECUTION_TRACKER_V0_6_0.md  FINAL_FIX_STATUS.md  FIX_REPORT_v062.md  (+152 more)
.github/workflows/: code-quality.yml  mcp-compliance.yml  performance.yml  publish.yml  release.yml  test.yml  tests.yml
.serena/: project.yml
benchmarks/: physics_benchmarks.py
client/: app.js  index.html  styles.css
demos/: demo_complete_integration.py  demo_egl_h264.py  demo_llm_integration.py  demo_mcp_protocol.py  demo_multi_client.py  demo_robot_control_mcp.py  demo_simple_mcp.py  demo_structured_scenes.py  demo_working_mcp.py
docs/: DEVELOPMENT_STANDARDS.md  INCREMENTAL_UPDATE_PLAN.md  LLM_INTEGRATION.md  MENAGERIE_INTEGRATION_PLAN.md  MENAGERIE_SETUP_GUIDE.md  MODULAR_ARCHITECTURE_DESIGN.md  MODULAR_MIGRATION_PLAN.md  MUJOCO_PLAYGROUND_INTEGRATION_ANALYSIS.md  PROJECT_STATUS_COMPREHENSIVE_ANALYSIS_2025.md  ROADMAP_2025_UPDATED.md  ROADMAP_PRIORITIES_2025.md  STRUCTURED_SCENES.md  TESTING_GUIDE.md  V0.8.0_MENAGERIE_AS_MODEL_LIBRARY.md  V0.8.0_MENAGERIE_INTEGRATION_PLAN.md  V0.8.0_SIMPLE_MENAGERIE_DEPENDENCY.md  VERSION_ROADMAP_MCP_COMPLIANT.md  WEBRTC_VIEWER.md  WEBRTC_VIEWER_GUIDE.md  scene_gen.md
docs/architecture/: MULTI_CLIENT_ARCHITECTURE.md  PROCESS_POOL_ARCHITECTURE.md  WEBRTC_INTEGRATION_GUIDE.md
docs/features/: ADVANCED_FEATURES_GUIDE.md  EGL_H264_FEATURES.md  LLM_INTEGRATION.md  MENAGERIE_INTEGRATION.md  SCENES.md
docs/guides/: WEBRTC_VIEWER_GUIDE.md
docs/testing/: TESTING.md
examples/: README_MOTION_CONTROL.md  ai_agent_example.py  animation_demo.py  auth_example.py  basic_example.py  comprehensive_llm_example.py  demo.py  domain_randomization_example.py  fastmcp_demo.py  llm_robot_control.py  llm_robot_control_text_only.py  mcp_demo.py  mcp_motion_control.py  model_generation_demo.py  motion_control_demo.py  multi_agent_demo.py  mvp_showcase.py  natural_language_demo.py  parameter_optimization_demo.py  performance_monitoring_demo.py  plot_demo.py  reinforcement_learning_demo.py  reinforcement_learning_example.py  robot_designer_demo.py  simple_demo.py  v0_1_0_demo.py  v0_1_1_demo.py  v0_1_2_demo.py  v0_2_0_demo.py  visual_demo.py  visualization_example.py
mcp-testing/: README.md
mcp-testing/docs/: TESTING_GUIDE.md
mcp-testing/scripts/: run-tests.sh  setup-linux.sh  setup-macos.sh  setup-windows.sh  test-client.sh
mcp-testing/tests/: test_mcp_functionality.py  test_performance.py
py_remote_viewer/: README.md  __init__.py  __main__.py  app_factory.py  builtin_scenes.py  camera_state.py  config.py  dev_check.py  events.py  logging_utils.py  mujoco_simulation.py  server.py  signaling.py  simulation_stub.py  webrtc_track.py
scripts/: README.md  cross_platform_test.py  endurance_test.py  estimate_client_capacity.py  format.sh  quality-check.sh  quick_internal_test.py  run_all_tests.sh  run_py_viewer.sh  setup-dev.sh  setup_test_environments.sh  test_local_install.sh  web_server.py
src/mujoco_mcp/: __init__.py  __main__.py  advanced_controllers.py  client_monitor.py  egl_renderer.py  enhanced_auth_manager.py  file_handler.py  h264_encoder.py  logging_config.py  mcp_server.py  mcp_server_headless.py  mcp_server_menagerie.py  mcp_server_robot.py  menagerie_loader.py  mock_viewer_server.py  multi_robot_coordinator.py  process_manager.py  remote_server.py  rl_integration.py  rl_runner.py  robot_controller.py  sensor_feedback.py  server.py  server_manager.py  server_new.py  server_old.py  server_v0_1_1.py  session_manager.py  simple_server.py  simulation.py  version.py  video_recorder.py  viewer_client.py  viewer_server.py  visualization_tools.py
tests/: conftest.py  conftest_v0_8.py  run_tests.py  test_basic.py  test_composite_objects.py  test_e2e_browser.py  test_enhanced_auth_manager.py  test_enhanced_collision.py  test_enhanced_semantics.py  test_mcp_browser_integration.py  test_mcp_server.py  test_menagerie_integration.py  test_multi_client.py  test_package.py  test_real_world_scenarios.py  test_robust_solver.py  test_server_comprehensive.py  test_simulation_comprehensive.py  test_spatial_reasoning.py  test_structured_scene_generation.py  test_symbolic_plan.py  test_v0_1_0.py  test_v0_1_1.py  test_v0_1_2.py  test_v0_2_0.py  test_v0_2_1.py  test_v0_2_2.py  test_v0_3_0.py  test_v0_3_1.py  test_v0_3_2.py  test_v0_4_0.py  test_v0_4_1.py  test_v0_4_2.py  test_v0_5_0.py  test_v0_5_0_simplified.py  test_v0_5_1.py  test_v0_5_2.py  test_v0_6_0.py  test_v0_7_1_comprehensive.py  test_v0_8_basic.py  (+1 more)
tests/integration/: diagnose_gui_issue.py  test_auto_rendering.py  test_basic_scenes.py  test_create_scene.py  test_debug.py  test_download_upload_features.py  test_fix_verification.py  test_gui_direct.py  test_quick_v062.py  test_simple_integration.py
tests/llm/: __init__.py  prompt_scenarios.py  test_primitives.py  test_prompt_scenarios.py
tests/mcp/: test_mcp_compliance.py  test_mcp_compliance_fixes.py  test_mcp_menagerie_final.py  (+1 more)
tools/: install.bat  install.sh  project_verify.py
(+36 files in other folders)
