[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-mcp"
version = "0.8.2"
description = "MuJoCo Model Context Protocol server - Control physics simulations with AI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "MuJoCo MCP Team", email = "noreply@mujoco-mcp.org"}
]
keywords = ["mcp", "mujoco", "physics", "simulation", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mujoco>=2.3.0",
    "mcp>=1.0.0",
    "numpy>=1.22.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mujoco-mcp = "mujoco_mcp.__main__:main"
mujoco-mcp-viewer = "mujoco_mcp.viewer_server:main"

[project.urls]
"Homepage" = "https://github.com/robotlearning123/mujoco-mcp"
"Documentation" = "https://mujoco-mcp.readthedocs.io"
"Bug Tracker" = "https://github.com/robotlearning123/mujoco-mcp/issues"
"Source" = "https://github.com/robotlearning123/mujoco-mcp"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 